                     from IoUtil to FileUtil. In FileUtil, add __extractZipMember() method.
                     Add retry support for __fetchUrlx(). Replace urlibx version of __fetchUrlx
                     with a version that depends on  requests module to better support
                     redirection and authentication.  Add further unit tests for FileUtil.
12-Aug-2019  - V0.37 Add modules CryptUtils and testCryptUtils.
13-Aug-2019  - V0.38 Add support for multipart serialization/deserialization
14-Aug-2019  - V0.39 Add methods for making working directories
29-Aug-2019  - V0.40 Fix py27 compatibility issues
 4-Sep-2019  - V0.41 Add common json numpy type encodings
18-Sep-2019  - V0.42 Add IoUtil() method deserializeCsvIter()
18-Sep-2019  - V0.43 remove return in the generator method for Py27
18-Sep-2019  - V0.44 Adjust testing timeout.
 7-Oct-2019  - V0.45 Adjust error handling in FileUtil()
27-Oct-2019  - V0.46 Add multiprocessor timeout decorator
29-Oct-2019  - V0.47 Add signal timeout decorator
20-Nov-2019  - V0.48 Add support for user supplied alternative delimiters, upgrade to py38
16-Dec-2019  - V0.49 Expand the exceptions for retry() on urlrequest get and post
25-Jan-2020  - V0.50 Add module ExecUtils() subprocess execution wrapper.
29-Jan-2020  - V0.51 Add encoding options for json serializer and xml deserializer
 1-Feb-2020  - V0.52 Add utility function getObjSize()
 3-Feb-2020  - V0.53 Update dependencies
10-Feb-2020  - V0.54 Add module TimeUtil()
17-Feb-2020  - V0.55 Add remove methods.
19-Feb-2020  - V0.56 Adjust failover processing for url fetches.
14-Mar-2020  - V0.57 Change policy to always precheck and create missing paths.
18-Apr-2020  - V0.58 Add feature to catch specified HTTP error codes in UrlRequestUtil()
18-Apr-2020  - V0.59 Adjustments for Py27 compatibility
18-Apr-2020  - V0.60 Further adjustments for Py27 compatibility
24-Apr-2020  - V0.61 Add return type processing in UrlRequestUtil() and undecorated method entry points.